--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@ i{
 	color: #55575d;
 	text-align: center;
 }
-.skill_text:hover{
+.service-item:hover{
 	box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.8);
 	transform: translateY(-12px);
 }
